don't capitalise COMPUTATIONAL SCIENCES

--- a/SummerSchoolPaper/intro.tex
+++ b/SummerSchoolPaper/intro.tex
@@ -2,20 +2,20 @@
 \label{s:intro}
 
 
-We consider reproducibility in the Computational Sciences in this paper.  We
-interpret Computational Sciences as including Computer Science, but also any
+We consider reproducibility in the computational sciences in this paper.  We
+interpret computational sciences as including Computer Science, but also any
 other science in which computational work plays an important role, such as
 physics or psychology. The central hypothesis of this paper is that
 reproducibility is a cornerstone of the scientific method, and should therefore
-be a cornerstone of Computational Sciences. We ask to what extent this is true
-and what challenges arise in reproducing work in Computational Sciences.
+be a cornerstone of computational sciences. We ask to what extent this is true
+and what challenges arise in reproducing work in computational sciences.
 
 To study these questions, we performed four case studies that consider different
-issues related to reproducibility in Computational Sciences.  Each case study
+issues related to reproducibility in computational sciences.  Each case study
 takes on a different aspect of reproducibility, identifies any problems
 encountered, and discusses the points that they have raised.
 
-An often-overlooked fact is that reproducibility in the Computational Sciences
+An often-overlooked fact is that reproducibility in the computational sciences
 is not only an issue of the actual computations, but also of preliminaries and
 other setup that is not related to computation at all. The first case study asks
 how reproducibility is affected by differing ethics requirements at different
@@ -68,7 +68,7 @@ participants, and is presented in Section~\ref{s:group4}.
 
 The case studies we consider are not exhaustive and no single one can give
 complete answers. Instead, they shine spotlights on specific, important areas
-related to the issue of reproducibility in Computational Sciences. Furthermore,
+related to the issue of reproducibility in computational sciences. Furthermore,
 each raises interesting questions for future consideration by researchers
 wishing to reproduce computational experiments.
 
