minor changes to summer school section

--- a/SummerSchoolPaper/school.tex
+++ b/SummerSchoolPaper/school.tex
@@ -4,7 +4,7 @@
 The summer school comprised two activities: a set of speakers
 describing ongoing developments and challenges in reproducible
 research, and a set of projects chosen by participants to address some
-of these outstanding challenges.
+of these challenges.
 
 Ian Gent from St Andrews and Lars Kotthoff from Cork gave
 presentations outlining the current state of the recomputation
@@ -17,11 +17,11 @@ virtualisation, by describing the impact of cloud computing on
 computational research.\footnote{e.g., the various projects at
 \url{http://azure4research.com/}} As more and more research projects
 involve the use of virtual machines running on cloud infrastructure,
-it might perhaps be possible to leverage this for creating
+it may be possible to leverage this for creating
 reproducible experiments by sharing these virtual machines. After that,
 Alexander Konovalov from St Andrews gave a tutorial on creating
 virtual machines in Microsoft Azure (6-month passes to access the
-latter were provided freely to all participants thanks to Microsoft Research's
+latter were provided free of charge to all participants thanks to Microsoft Research's
 generosity).
 
 Two members of the Software Sustainability
@@ -32,9 +32,9 @@ need for reproducibility, Steve discussed how to make research
 software sustainable, by using best practices for programming, and
 indeed thinking about what ``good'' code means.
 
-Darren Kidney from the University of St Andrews introduced the use of
-standard statistical tools such as R and SWeave to create recomputable
-papers. Indeed this paper is written using SWeave.
+Darren Kidney from St Andrews covered more practical aspects of reproducible
+research and gave a tutorial on R and SWeave to create
+recomputable papers. Indeed this paper is written using SWeave.
 
 In addition to sharing code and the systems used to run an experiment,
 much reproducible research requires the sharing of research data,
@@ -45,16 +45,16 @@ difficulties in documenting data, convincing researchers to dedicate
 the time to share their data, citing data correctly and the privacy
 issues surrounding the sharing of sensitive data.
 
-Sharing code, data or systems may also involve many legal issues: code
+Sharing code, data or systems often involves legal issues: code
 may have particular licenses that make sharing hard or easy, data may
 be subject to data protection legislation, or indeed the law might
 suggest best practices that could make recomputable research easier to
 achieve.  Burkhard Schafer from the Edinburgh School of Law gave a set
-of presentations covering these and many other aspects of the law.
+of presentations covering these and many other aspects of UK law.
 
-Not all recomputable computational experiments solely involve
+Not all recomputable computational experiments involve only
 computations. Miguel Nacenta from the St Andrews Human-Computer
 Interaction (HCI) research group discussed the issues around
 reproducibility in HCI experiments that involve human participants,
 and led a session in which summer school attendees attempted to
-reproduce the analysis from an HCI research paper.
+reproduce the analysis from one of his own HCI research papers.
