adding a bib entry (NSF: A vision and strategy for software for science, engineering and education)

--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -356,4 +356,11 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
 }
 
 
+@Misc{NSF,
+    title = {A vision and strategy for software for science, engineering and education},
+      url = {http://www.nsf.gov/pubs/2012/nsf12113/nsf12113.pdf},
+   author = {NSF},  
+     year = {2012},
+   publisher = {US National Science Foundation}
+  }
 
