--- a/SummerSchoolPaper/intro.tex
+++ b/SummerSchoolPaper/intro.tex
@@ -17,7 +17,7 @@ These questions were as follows.
 How is reproducibility affected by differing ethics requirements at different universities? 
 Are parallel and distributed computational experiments more or less reproducible than serial ones?
 How reproducible are computational scientific experiments from disciplines other than computer science?
-How reproducible is the data analysis is a published experiment in human-computer interaction, where 
+How reproducible is the data analysis in a published experiment in human-computer interaction, where 
 the author made significant efforts to make it reproducible?
 
 Most work for this paper was performed 
