adding a reference to obstacles

--- a/SummerSchoolPaper/obstacles.tex
+++ b/SummerSchoolPaper/obstacles.tex
@@ -3,15 +3,17 @@
 
 There are various obstacles to reproducibility, and many of these were
   discussed by speakers and participants during the week. 
-The obstacles and challenges are related to various stages of scientific 
-  endeavour and various aspects of reproducibility.
+The obstacles and challenges are related to different stages of scientific 
+  endeavour and different aspects of reproducibility.
 Although not intended to be an exhaustive list, amongst the obstacles and 
   challenges that we identified are:
 
-{\bf Incentives} -- even though the issue of reproducibility is
+{\bf Incentives} -- even though, as outlined in section \ref{s:recomputation}, 
+  the issue of reproducibility is
   currently actively discussed by the scientific community, 
   and the funding entities do aim at enforcing, or at least promoting,
-  openness of research, the prevalent impression from the discussions at 
+  openness in computational science \citep[see e.g.]{NSF}, 
+  the prevalent impression from the discussions at 
   the summer school is that there is still a lot to be done to increase 
   awareness of how one can benefit from reproducibility.
 Mechanisms that would reward those who deliver reproducible results are also
