adding a bib entrly (Merali_2010)

--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -378,3 +378,13 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
                       url = {http://www.stat.uni-muenchen.de/~leisch/Sweave}
 }
 
+@article{Merali_2010,
+     title = {Computational science: Error, why scientific programming does not compute},
+    author = {Merali, Zeeya},
+   journal = {Nature},
+    volume = {467},
+    number = {7317},
+     pages = {775--777},
+      year = {2010},
+       doi = {10.1038/467775a}
+}
