--- a/SummerSchoolPaper/group3.tex
+++ b/SummerSchoolPaper/group3.tex
@@ -112,4 +112,4 @@ A counterexample is the Geoscientific Model Development (GMD) journal, which enc
 Yet, the same journal, as of now, imposes a 50~MB limit on the size of electronic supplements 
   which effectively rules out shipping a VM together with the paper.
 
-The level of computer proficiency in non-CS domains \citep[see discussion by]{Merali_2010} is also likely to influence the ability of researchers to use the Virtual Machines---it is arguably less likely that a physics or urban-planning journal reviewer will be comfortable using a VM, in contrast to CS-related journals.
+The level of computer proficiency in non-CS domains~\cite{Merali_2010} is also likely to influence the ability of researchers to use the Virtual Machines---it is arguably less likely that a physics or urban-planning journal reviewer will be comfortable using a VM, in contrast to CS-related journals.
