--- a/SummerSchoolPaper/obstacles.tex
+++ b/SummerSchoolPaper/obstacles.tex
@@ -12,7 +12,7 @@ Although not intended to be an exhaustive list, amongst the obstacles and
   the issue of reproducibility is
   currently actively discussed by the scientific community, 
   and the funding entities do aim at enforcing, or at least promoting,
-  openness in computational science \citep[see e.g.]{NSF}, 
+  openness in computational science (e.g., \cite{NSF}), 
   the prevalent impression from the discussions at 
   the summer school is that there is still a lot to be done to increase 
   awareness of how one can benefit from reproducibility.
