--- a/SummerSchoolPaper/obstacles.tex
+++ b/SummerSchoolPaper/obstacles.tex
@@ -5,10 +5,9 @@ There are various obstacles to reproducibility, and many of these were
   discussed by speakers and participants during the week. 
 The obstacles and challenges are related to different stages of scientific 
   endeavour and different aspects of reproducibility.
-Although not intended to be an exhaustive list, amongst the obstacles and 
-  challenges that we identified are:
+Amongst the obstacles and challenges that we identified are:
 
-{\bf Incentives} -- even though, as outlined in section \ref{s:recomputation}, 
+{\bf Incentives} -- even though, as outlined in Section~\ref{s:recomputation}, 
   the issue of reproducibility is
   currently actively discussed by the scientific community, 
   and the funding entities do aim at enforcing, or at least promoting,
@@ -23,7 +22,7 @@ It was reiterated during the school that the self-benefits
   a good enough reason to invest time on assuring it.
 However, in general both the self-benefits and the benefits to the community
   are latent and perceptible only in the longer term.
-Thus investing the time to offer reproducibility is hardly possible without
+Thus investing the time to offer reproducibility is difficult without
   approbation and endorsement from colleagues, collaborators, supervisors,
   reviewers and executives.
   
@@ -36,25 +35,27 @@ Sharing data may additionally be bound to ethical responsibility, for instance
 Even non-sensitive non-commercial data may not be readily redistributed
   without assuring proper ethical consent from the data originators.
 
-{\bf Practicalities} -- there is definitely no consensus as to what is the
-  best technique for offering reproducibility of computational experiments. 
+{\bf Practicalities} -- there is definitely no consensus as to what the
+  best technique for facilitating reproducibility of computational experiments is. 
 The reasons are at least threefold. 
-First, even the wealth of nomenclature (replicate, recompute, reproduce, 
-  rerun, repeat, reuse) suggests that the aims and the needs of researchers
-  differ.
+First, the wealth of nomenclature (replicate, recompute, reproduce, 
+  rerun, repeat, reuse) indicates that the aims and the needs of researchers
+  differ significantly.
 Second, the technology advances and continuously offers new methods that can
   aid researchers in offering reproducible results.
 Third, there are numerous tradeoffs to be made: 
-  (i) embrace cutting edge or widespread technology; 
-  (ii) offer standalone or integrable solutions; 
-  (iii) prioritise independence or ease of reproduction; 
-  (iv) disseminate reduced comprehensible datasets or avoid excluding any data;
-  (v) put efforts on automating experiments with already publishable results or
-    move on to new experiments.
+  \begin{inparaenum}[(i)]
+  \item embrace cutting edge or widespread technology; 
+  \item offer standalone or integrable solutions; 
+  \item prioritise independence or ease of reproduction; 
+  \item disseminate reduced comprehensible datasets or avoid excluding any data;
+  \item put efforts on automating experiments with already publishable results
+  or move on to new experiments.
+  \end{inparaenum}
     
 {\bf Dissemination} -- even if all of the above obstacles are overcome, 
   distribution and long-term persistence of the reproducible experiments
-  may pose challenges.
+  pose challenges.
 First, finding a venue for long-term preservation of large datasets or even 
   moderately-sized virtual-machine based packages may be an issue.
 This is especially the case if one aims at blending software and data
@@ -63,13 +64,13 @@ Second, given that one of the key aims of reproducibility in science
   is to offer independent verification, the amount of knowledge 
   needed to rerun an experiment has to be reasonably adapted to the
   target audience.
-Interdisciplinary is inherent in the idea of computational sciences that
-  bridge computational techniques with diverse domains of science.
-Consequently, one has to take into account that these may be the
+Interdisciplinarity is inherent in the idea of computational sciences that
+  merge computational techniques with diverse domains of science.
+Consequently, one has to take into account that the users who will attempt to
+  reproduce the results of an experiment may be
   astronomers, biologists, chemists, geologists, linguists, mathematicians,
-  oceanographers, physicists or statisticians who will attempt to
-  reproduce the results of an experiment.
+  oceanographers, physicists, or statisticians.
 Last but not least, dissemination of data, and especially of executable
-  programs is subject to security issues associated with both security
-  of computer systems and personal data of the researchers who
-  are reproducing the results.
+  programs is subject to security issues associated with both the security
+  of computer systems and the safety of the personal data of the researchers who
+  are preparing the experiment and reproducing the results.
