--- a/SummerSchoolPaper/school.tex
+++ b/SummerSchoolPaper/school.tex
@@ -54,7 +54,7 @@ of presentations covering these and many other aspects of UK law.
 
 Not all recomputable computational experiments involve only
 computations. Miguel Nacenta from the St Andrews Human-Computer
-Interaction (HCI) research group discussed the issues around
+Interaction research group discussed the issues around
 reproducibility in HCI experiments that involve human participants,
 and led a session in which summer school attendees attempted to
 reproduce the analysis from one of his own HCI research papers.
