make case in case study captions consistent

--- a/SummerSchoolPaper/group3.tex
+++ b/SummerSchoolPaper/group3.tex
@@ -1,4 +1,4 @@
-\section{Case study \#3: recomputing non-CS experiments}
+\section{Case study \#3: Recomputing non-CS experiments}
 \label{s:group3}
 
 \subsection{Background}
