--- a/SummerSchoolPaper/intro.tex
+++ b/SummerSchoolPaper/intro.tex
@@ -3,7 +3,7 @@
 
 
 We consider reproducibility in the computational sciences in this paper.  We
-interpret computational sciences as including Computer Science, but also any
+interpret computational sciences as including computer science, but also any
 other science in which computational work plays an important role, such as
 physics or psychology. The central hypothesis of this paper is that
 reproducibility is a cornerstone of the scientific method, and should therefore
@@ -33,7 +33,7 @@ make use of this increased processing power, experiments need to utilise
 multiple resources at once. But is this inherently detrimental to
 reproducibility?
 
-While Computer Science likely accounts for the majority of computational
+While computer science likely accounts for the majority of computational
 experiments, they are becoming increasingly important in other areas. In physics
 or chemistry for example, simulations of physical processes help scientists gain
 insights. Our third case study is motivated by this fact and asks how
