--- a/SummerSchoolPaper/group3.tex
+++ b/SummerSchoolPaper/group3.tex
@@ -6,45 +6,56 @@
 The focus of this section is on the issues relevant to research reproducibility that are potentially 
   unique to non-CS computational research.
 The discussion is based on experience gained while packaging three computational experiments 
-  into self-contained virtual-machines.
-The papers on which the discussion is based (i.e., \cite{danielpaper,bareford2010nanoflare,arabas2013libcloud}) 
-  deal with urban planning, solar physics, and atmospheric physics respectively, 
-  although the discussion is likely relevant to other non-CS domains.
+  into recomputable virtual machines.
+The papers on which the discussion is based 
+  deal with urban planning~\cite{danielpaper}, solar
+  physics~\cite{bareford2010nanoflare}, and atmospheric
+  physics~\cite{arabas2013libcloud},
+  although the discussion is likely relevant to other non-CS domains. One of the
+  authors of each paper was involved in this case study.
 
 \subsection{Methodology}
 
 Our aim was to offer potential readers (or reviewers) of the papers in question, 
   the opportunity to reproduce the figures presented in the papers, 
   to inspect the code, and to possibly test behaviour of the programs with other parameters.
-To offer it all within a ready-to-use environment, we have used the Vagrant tool to
+To offer it all within a ready-to-use environment, we have used the Vagrant
+tool\footnote{\url{https://www.vagrantup.com/}}
+to
   construct a single virtual machine with all needed software and its dependencies installed.
-The virtual machine was based on the Debian sid distribution.
+The virtual machine was based on the Debian Sid GNU/Linux distribution.
 
 \subsection{Results}
 \subsubsection*{Experiment 1: Urban Planning}
 
-For the first case study, we tried to recompute parts of Table~6 of
+For the first paper, we tried to recompute parts of Table~6 of
 \cite{danielpaper}, in which the punctuality of a bus service in Edinburgh is
 evaluated using statistical methods. Table~6 contains confidence intervals that
 are constructed using a piece of software written in Java. It is possible to
 compile the source code after installing a Java Software Development Kit on the
 virtual machine. The software uses the SSJ library for Stochastic
-Simulation,\footnote{\url{http://simul.iro.umontreal.ca/ssj-2/indexe.html}} which had to be downloaded from the Internet. After that, the code was able to run.
+Simulation\footnote{\url{http://simul.iro.umontreal.ca/ssj-2/indexe.html}},
+which had to be downloaded from the Internet. After that, we were able to run
+the code.
 
 We encountered legal obstacles in the following three areas.
 \begin{itemize} 
 \item Code-related: the software was developed as part of the EU project
-QUANTICOL, which is funded by the European Commission as part of its 7th
+QUANTICOL\footnote{\url{http://blog.inf.ed.ac.uk/quanticol/}}, which is funded by the European Commission as part of its 7th
 Framework programme. In the General Conditions part of the project's grant
 agreement, it is stated that the IP rights are awarded to the beneficiary, which
-in this case would be the University of Edinburgh. In turn, the University of
+in this case is the University of Edinburgh. In turn, the University of
 Edinburgh has issued a position statement on intellectual property
 rights\footnote{\url{http://tinyurl.com/kh8quod}} in which it stated that it ``\emph{is the policy of the University of Edinburgh to develop University research capabilities and to assess, develop and promote the transfer of Edinburgh's technology and ideas for society's use and benefit.}'' Still, publication of the code would need to be checked with a supervisor.
 \item Data-related: the code uses a dataset based on bus location measurements provided to us by Lothian Buses. We would need their permission to put this dataset in the public domain.
 \end{itemize}
 The use of the SSJ package is not an obstacle because it is released under the GPL licence from GNU.
 
-The resulting virtual machine contains the Java source files, allowing researchers with knowledge of Java to analyse the correctness of the programme. However, the code is not documented and may be hard to read. Specifically, parameters are hard-coded and no interpretation is given of the resulting numbers and \LaTeX\ code.
+The resulting virtual machine contains the Java source files, allowing
+researchers with knowledge of Java to analyse the correctness of the programme.
+However, the code is not documented and may be hard to read. Specifically,
+parameters are hard-coded and no interpretation is given of the produced
+numbers and \LaTeX\ code.
 
 The output of the Java code is displayed in Table~\ref{tab: z bootstrapped cis}.
 
@@ -52,13 +63,21 @@ The output of the Java code is displayed in Table~\ref{tab: z bootstrapped cis}.
 
 \subsubsection*{Experiment 2: Solar Physics}
 
-At the start of the recomputation exercise it was judged that the results presented in \cite{bareford2010nanoflare} would be the easiest (of the three publications outside of computer science) to reproduce. The underlying code is serial in nature and not tied to specific hardware or operating system platform. 
+At the start of the recomputation exercise it was judged that the results
+presented in \cite{bareford2010nanoflare} would be the easiest (of the three
+publications outside of computer science) to reproduce. The underlying code is
+serial in nature and not tied to specific a hardware or operating system platform. 
 
-The work discussed in \cite{bareford2010nanoflare} concerns the energy released from an idealised cylindrical magnetic field when it becomes unstable and subsequently relaxes to a simpler state. Initially, a field (or loop) starts in a stable configuration and is then taken on a random walk through a known two dimensional region of stability, see \mbox{Figure 3} of the aforementioned publication. When the field crosses the boundary of this region (i.e., the threshold for instability), an energy release is determined and the field is moved to simpler stable configuration. 
+The work discussed in~\cite{bareford2010nanoflare} concerns the energy released
+from an idealised cylindrical magnetic field when it becomes unstable and
+subsequently relaxes to a simpler state. Initially, a field (or loop) starts in
+a stable configuration and is then taken on a random walk through a known two
+dimensional region of stability, see \mbox{Figure 3} of the aforementioned
+publication. When the field crosses the boundary of this region (i.e.\ the threshold for instability), an energy release is determined and the field is moved to simpler stable configuration. 
 
-When this process is repeated many times, the results can be expressed as energy distributions, see Figure 14 of \cite{bareford2010nanoflare}, which shows the energy releases for $10^5$ relaxations involving a variety of loop lifetimes. We decided to focus on reproducing only this figure. The individual plots were taken from the results produced by a C++ code called Taylor Relaxation of Loop Ensembles, or TRoLE for short, that automates the process described above.
+When this process is repeated many times, the results can be expressed as energy distributions, see Figure~14 of~\cite{bareford2010nanoflare}, which shows the energy releases for $10^5$ relaxations involving a variety of loop lifetimes. We decided to focus on reproducing only this figure. The individual plots were taken from the results produced by a C++ code called Taylor Relaxation of Loop Ensembles, or TRoLE for short, that automates the process described above.
 
-The TRoLE code was written when the first author \cite{bareford2010nanoflare}
+The TRoLE code was written when the first author of~\cite{bareford2010nanoflare}
 was a postgraduate at the University of Manchester. It was necessary therefore
 to check the IP policy for this
 institution.\footnote{\url{http://documents.manchester.ac.uk/DocuInfo.aspx?DocID=487}}
@@ -68,14 +87,28 @@ which we took to mean that the first author was free to place the code in a
 publicly available
 repository.\footnote{\url{https://github.com/mbareford/trole}}
 
-The next issue concerned a technical matter: the code was written with the use
-of a proprietary numerical algorithms library
+The next issue concerned a technical matter: the code uses
+a proprietary numerical algorithms library
 (NAG),\footnote{\url{http://www.nag.co.uk/numeric/CL/CLdescription.asp}} the
 licence for which had expired. Fortunately, there is an open source alternative,
 the GNU Scientific Library
 (GSL).\footnote{\url{http://www.gnu.org/software/gsl/}} The TRoLE code was updated such that all NAG calls were replaced with the GSL alternative. 
 
-After the code was recompiled and linked with the GSL libraries, it was ready to run the simulation of $10^5$ relaxation events. Alas, the code could at first only simulate a fraction of this total (146 events): the code reported that it had reached a point on the instability threshold for which a stable (relaxed) configuration could not be calculated. The relaxed state is determined by ensuring that certain properties are conserved (i.e., the property values match those calculated for the unstable state)---this is essentially a root finding exercise. Further investigation revealed that the magnetic field profiles were being calculated incorrectly for a wide range of threshold states. The cause concerned incorrect substitutions for the NAG Bessel functions. For example, the NAG routine, nag\_bessel\_j0() is the call for a regular cylindrical Bessel function, whereas, what looks like the equivalent in GSL, gsl\_bessel\_j0(), is actually the routine for a regular \textit{spherical} Bessel function. All that was required to call the correct routine was to capitalise the last letter, i.e., gsl\_bessel\_J0().
+After the code was recompiled and linked with the GSL libraries, it was ready to
+run the simulation of $10^5$ relaxation events. Alas, the code could at first
+only simulate a fraction of this total (146 events): the code reported that it
+had reached a point on the instability threshold for which a stable (relaxed)
+configuration could not be calculated. The relaxed state is determined by
+ensuring that certain properties are conserved (i.e.\ the property values match
+those calculated for the unstable state)---this is essentially a root finding
+exercise. Further investigation revealed that the magnetic field profiles were
+being calculated incorrectly for a wide range of threshold states. The cause
+concerned incorrect substitutions for the NAG Bessel functions. For example, the
+NAG routine, nag\_bessel\_j0() is the call for a regular cylindrical Bessel
+function, whereas, what looks like the equivalent in GSL, gsl\_bessel\_j0(), is
+actually the routine for a regular \textit{spherical} Bessel function. All that
+was required to call the correct routine was to capitalise the last letter,
+i.e.\ gsl\_bessel\_J0().
  
 The magnetic field that describes every possible loop configuration is defined in terms of cylindrical Bessel functions: hence, an error here will have dramatic consequences for the results produced by the TRoLE code. Once these function calls were corrected, the recomputation was successful. Figure \ref{fig_recomp_grp3_exp2} shows two of the recomputated plots, the published energy distributions \cite{bareford2010nanoflare} are given in blue.
 \begin{figure}
@@ -98,36 +131,39 @@ The differences between the two sets of results are negligible and entirely cons
 
 \subsubsection*{Experiment 3: Atmospheric Physics}
 
-We also prepared a virtual machine with pre-built software for reproducing 
+For the third paper, we prepared a virtual machine with pre-built software for reproducing 
   simulations of idealised atmospheric clouds presented in \cite{arabas2013libcloud}.
 The paper covers description of an open-source C++ library named libcloudph++. 
 The library is intended for representing microphysics of clouds and precipitation
   in numerical models -- coupling libcloudph++ with a fluid-dynamics solver 
   of an atmospheric flow allows one to study the formation of clouds and rain.
 
-While the software has already been released under an open-source GPL license,
-  and has been accessible through a Github repository, we have still 
-  identified a potential legal issue.
-The library features implementation of an algorithm inspired by a technique 
-  described in scientific literature but also covered by several patents 
-  including a European one (EP1847939A2). 
+While the software has already been released under the open-source GPL license
+  and has been accessible through a GitHub repository, there is still
+  a potential legal issue.
+The library features the implementation of an algorithm inspired by a technique 
+  described in the scientific literature but also covered by several patents,
+  including a European one (EP1847939A2). This prevents us from using the
+  existing implementation.
 
 Furthermore, the crux of the implementation is its support for execution
   on both CPUs and GPUs, the latter being optional but offering 
-  significantly shorter executions times.
+  significantly faster executions times.
 However, the implementation uses the non-free CUDA standard what limits its potential
   users to owners of hardware of particular vendor and related proprietary software.
 
-The only challenge in setting the virtual machine up was in providing all needed
+The only challenge in setting up the virtual machine was in providing all needed
   dependencies, namely recent versions of a C++ compiler, and the CMake, Boost and Thrust 
   packages.
 
 \subsection{Discussion}
 
-We encountered legal obstacles in all case studies.
+We encountered legal obstacles with all papers.
 All of the software had been developed at universities, which typically resulted in the copyright being held by these institutions.
-Furthermore, the decisions concerning whether to allow open-source distribution of the code and the choice of licensing terms might be the prerogative of a university representative (e.g., a PhD supervisor).
-While this is in no way unique to non-CS domains, it is likely that pre-existing IP procedures are less likely to cover software-dissemination aspects in institutions not dealing with computer science.
+Furthermore, the decisions of whether to allow open-source distribution of the
+code and the choice of licensing terms might be the prerogative of a university
+representative (e.g.\ a PhD supervisor).
+While this is in no way unique to non-CS domains, it is likely that pre-existing IP procedures are less likely to cover software dissemination aspects in institutions not dealing with computer science.
 Even if the legal status of the code developed for a given experiment is settled and matches reproducibility requirements, the environment needed to run it might prevent unconstrained recomputation.
 This in fact was also the case in one of the programs in question, as the code relied on a proprietary software library.
 
@@ -137,4 +173,4 @@ A counterexample is the Geoscientific Model Development (GMD) journal, which enc
 Yet, the same journal, as of now, imposes a 50~MB limit on the size of electronic supplements 
   which effectively rules out shipping a VM together with the paper.
 
-The level of computer proficiency in non-CS domains~\cite{Merali_2010} is also likely to influence the ability of researchers to use the Virtual Machines---it is arguably less likely that a physics or urban-planning journal reviewer will be comfortable using a VM, in contrast to CS-related journals.
+The level of computer proficiency in non-CS domains~\cite{Merali_2010} is also likely to influence the ability of researchers to use the virtual machines -- it is arguably less likely that a physics or urban-planning journal reviewer will be comfortable using a VM, in contrast to CS-related journals.
