proofread final sections

--- a/SummerSchoolPaper/ack.tex
+++ b/SummerSchoolPaper/ack.tex
@@ -3,11 +3,12 @@
 
 The authors of this paper include organisers and participants in the
 summer school. We are very grateful to all of the people who helped
-make the school a success.
+make the school a success and want to acknowledge everybody who is not an
+author.
 
 First we thank the organisers: John McDermott, Angela Miguel, and Lakshitha de Silva for organisational and technical help.
 
-We thank the various sponsors of the Summer School  for financial and other forms of assistance.
+We thank the various sponsors of the summer school for financial and other forms of assistance.
 These were: SICSA (the Scottish Informatics and Computer Science Alliance); 
 Microsoft Azure; the Software Sustainability Institute; 
 the School of Computer Science at the University of St Andrews; 
@@ -15,7 +16,7 @@ and the EPSRC Impact Acceleration Award ``Recomputation.org: Making
 Computational Experiments Recomputable''
 at the University of St Andrews.
 
-We are also grateful to speakers at the Summer School who were not also authors of this paper: 
+We are also grateful to speakers at the summer school who were not also authors of this paper: 
 Neil Chue Hong,
 Stephen Crouch, 
 Darren Kidney, and
