--- a/SummerSchoolPaper/obstacles.tex
+++ b/SummerSchoolPaper/obstacles.tex
@@ -10,7 +10,7 @@ Amongst the obstacles and challenges that we identified are:
 {\bf Incentives} -- even though, as outlined in Section~\ref{s:recomputation}, 
   the issue of reproducibility is
   currently actively discussed by the scientific community, 
-  and the funding entities do aim at enforcing, or at least promoting,
+  and the funding entities do campaign for
   openness in computational science (e.g., \cite{NSF}), 
   the prevalent impression from the discussions at 
   the summer school is that there is still a lot to be done to increase 
